# rust-factorial

./: Cargo.toml  README.md
src/: lib.rs
