[package]
name = "factorial"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1.44"
num-traits = "0.2.14"
num-bigint = { version = "0.4.0", optional = true, default-features = false, features = ["std"] }
